--- a/package.json
+++ b/package.json
@@ -4,8 +4,22 @@
   "description": "In this app you can create list of student and store data related to that student and just by clicking on a button you can download that data in csv format",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --ext js,ejs,cjs ./index.js"
   },
   "author": "devZee",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "connect-mongo": "^5.0.0",
+    "csv-writer": "^1.6.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.5.3",
+    "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "path": "^0.12.7"
+  }
 }
